i added new paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <hi>my first commit</hi>
+    <hi>my first version control commit <!DOCTYPE html>
+        <p> i am adding a new paragraph to my git</p>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        
+    </body>
+    </html></hi>
 </body>
 </html>
