i added new paragraph

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <hi>my first version control commit <!DOCTYPE html>
+    <hi>my first version control commit <hi>
         <p> i am adding a new paragraph to my git</p>
     <html lang="en">
     <head>
